# gb-benchmarks

./: .gitignore  AGENTS.md  README.md
port-to-port/: PORTING_PROGRESS.md  build_primary_leaderboard.py  evaluate_runs.py  llm_factory.py  loop_logic.md  mini-rl-env.py  openai_responses_service.py  pyproject.toml  replay_server.py  replay_support.py  run_big_sweeps.sh  run_google_single_inference.py  run_model_matrix.sh  run_system_prompt_sweep.sh  synthetic_world.py  system_instruction.md  taskagent_event_summaries.py  tool_catalog.py  tools_schema.py
port-to-port/docs/: leaderboard-metrics.md  prompt-and-primary-score-plan.md  scoring-notes.md
port-to-port/leaderboards/: leaderboard-natural.md
port-to-port/system_prompts/: baseline_inlined.txt  baseline_recent.txt  baseline_recent_inlined.txt  concise.txt  concise_inlined.txt  minimal.txt  optimized_1.txt  optimized_1_inlined.txt  strict_rules.txt  structured_cot.txt
port-to-port/tests/: test_regressions.py
viz/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
viz/src/: App.tsx  api.ts  format.ts  index.css  types.ts
viz/src/components/: ActionLog.tsx  ContextPanel.tsx  LoaderScreen.tsx  PlaybackControls.tsx  ReplayHeader.tsx  ScorePanel.tsx  SectorLane.tsx  SectorMap.tsx  SectorNode.tsx
viz/src/data/: graph.ts  ports.ts
viz/src/store/: playback.ts
